@@ -1,5 +1,10 @@
 2002-06-03  Miguel Sofer  <msofer@users.sourceforge.net>
 
+	* generic/tclExecute.c: reverting an accidental modificationin the
+	last commit.
+	
+2002-06-03  Miguel Sofer  <msofer@users.sourceforge.net>
+
 	* doc/Tcl.n: clarify the empty variable name issue ([Bug 549285]
 	reported by Tom Krehbiel, patch by Don Porter).
 
